# yadata

./: .gitignore  CLAUDE.md  README.md  custom_yaml.py  out.yaml  pyproject.toml  setup.py  try
_yadata_types/: __init__.py
data/: __init__.py
data/Person/: jenča.yaml  jenčová.yaml
data/persons/: jenča.yaml  jenča_0.yaml  jenča_1.yaml
doc/: Makefile  projekt.html  projekt.md  projekt1.html  projekt1.md  projekt2.html  projekt2.md
doc/custom_yaml/: custom_dict_subclass_yaml.py  custom_meta_dict_subclass_yaml.py  custom_set_yaml.py
scripts/: yadata
templates/: keys.txt  template.txt
tests/command/: test_append.py  test_execc.py  test_filter.py
tests/utils/compare/: test_cmp_to_key.py  test_keys_to_cmp.py
yadata/: .coverage  __init__.py  datadir.py  datadir.py.old  indexed_dir.py  main.py  record.py  sane_yaml.py
yadata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yadata/command/: __init__.py  append.py  cast.py  command.py  execc.py  export.py  filter.py  importt.py  merge.py  read.py  render.py  run.py  sort.py  types.py  yieldd.py
yadata/utils/: compare.py  misc.py  sane_yaml.py
