[tool.poetry]
name = "yadata"
version = "0.1.0"
description = "YAML based object database"
authors = ["Gejza Jenča <gejza.jenca@stuba.sk>"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
