[tool.poetry]
name = "yadata"
version = "0.1.0"
description = "YAML based object database"
authors = ["Gejza JenÄa <gejza.jenca@stuba.sk>"]
license = "GPL2"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
Jinja2 = "^3.1.3"

[tool.poetry.scripts]
yadata = 'yadata.main:run'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
